Fix navbar spacing

--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,19 @@
     <script src="js/main.js"></script>
   </head>
   <body>
-    <div class="navbar" id="nav">
-      <a href="#">Ben Crane</a>
-      <div class="spacer"></div>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+    <div id="nav">
+      <div class="navbar">
+        <a href="#">Ben Crane</a>
+        <div class="spacer"></div>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Projects</a>
+        <a href="#">Contact</a>
+      </div>
     </div>
 
     <div class="full-height center-items flex" id="home">
-      <div>
+      <div id="main-header">
         <h1>
           Hello, I'm <span id="name">Ben Crane</span>.<br/>
           I'm a full stack web developer.
