--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,12 @@
   <body>
     <div id="nav">
       <div class="navbar">
-        <a href="#">Ben Crane</a>
+        <!-- <a href="#">Ben Crane</a> -->
         <div class="spacer"></div>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
 
@@ -44,6 +44,33 @@
       </div>
     </div>
 
+    <div id="projects">
+      <div>
+        <h1>Projects</h1>
+      </div>
+    </div>
+
+    <div id="contact" class="center-text center-items flex">
+      <div>
+        <h1>Contact</h1>
+        <h3>Have a question or want to work together?</h3>
+        <form>
+          <div>
+            <input type="text" id="name" placeholder="Name">
+          </div>
+          <div>
+            <input type="email" id="email" placeholder="Email">
+          </div>
+          <div>
+            <textarea id="message" placeholder="Your message"></textarea>
+          </div>
+          <div>
+            <button type="Submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <footer>
       <div class="icon-wrap flex row">
         <a href="https://twitter.com/bencrane">
@@ -54,6 +81,11 @@
         <a href="https://github.com/benscrane">
           <div class="icon">
             <i class="mdi mdi-github-circle"></i>
+          </div>
+        </a>
+        <a href="mailto:bencrane@pm.me">
+          <div class="icon">
+            <i class="mdi mdi-email"></i>
           </div>
         </a>
       </div>
