--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,8 @@
     <script src="js/main.js"></script>
   </head>
   <body>
-    <div id="nav" class="bg-black w-full p-2">
+    <div id="nav" class="bg-blue-darkest w-full p-2">
       <div class="flex uppercase text-md md:text-2xl">
-        <!-- <a href="#">Ben Crane</a> -->
         <div class="flex-grow"></div>
         <a href="#home">Home</a>
         <a href="#about">About</a>
@@ -54,7 +53,16 @@
 
     <div id="projects" class="w-full flex flex-wrap justify-center">
       <div class="w-full h-24"></div>
-      <p class="uppercase text-5xl font-semibold">Projects</p>
+      <div class="w-full text-center mb-5">
+        <p class="uppercase text-5xl font-semibold">Projects</p>
+      </div>
+      <div class="w-full sm:w-full md:w-1/2 lg:w-1/3">
+        <img src="assets/TaskEscalatorHome.png">
+      </div>
+      <div
+        class="w-full sm:w-full md:w-1/2 lg:w-1/3">
+        <img src="assets/LeaderboardHome.png">
+      </div>
     </div>
 
     <div id="contact" class="text-center bg-black text-white h-screen flex items-center justify-center">
