--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <div class="flex-grow"></div>
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
+        <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div id="projects" class="w-full flex flex-wrap justify-center">
+    <div id="portfolio" class="w-full flex flex-wrap justify-center">
       <div class="w-full h-24"></div>
       <div class="w-full text-center mb-5">
         <p class="uppercase text-5xl font-semibold">Projects</p>
