Add rotating words

--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,22 @@
         <div class="flex-grow"></div>
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
+        <a href="#portfolio">Projects</a>
         <a href="#contact">Contact</a>
       </div>
     </div>
 
     <div class="h-screen bg-blue-darkest text-white flex items-center justify-center" id="home">
-      <div>
-        <p class="text-xl md:text-5xl font-semibold">
+      <div class="wrapper">
+        <h2 class="text-xl md:text-5xl font-semibold sentence">
           Hello, I'm <span class="text-orange-dark">Ben Crane</span>.<br/>
-          I'm a full stack web developer.
-        </p>
+          I build <div class="sliding-vertical text-xl md:text-5xl font-semibold text-green-dark">
+            <span>websites.</span>
+            <span>web apps.</span>
+            <span>mobile apps.</span>
+            <span>furniture.</span>
+          </div>
+        </h2>
       </div>
     </div>
 
