Update leaderboard linke

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
           <div>
             <a
               class="no-underline text-blue-darker" 
-              href="https://github.com/benscrane/">View Source</a>
+              href="https://github.com/TheLeaderboard/leaderboard-web">View Source</a>
           </div>
         </div>
       </div>
