--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,12 @@
             <div class="font-bold text-3xl">Task Escalator</div>
             <span class="text-blue-darker font-semibold">Firebase + VueJS</span>
           </div>
-          <button
-            class="uppercase bg-green-dark text-white text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
-            Visit site
-          </button>
+          <a href="https://taskalator.firebaseapp.com">
+            <button
+              class="uppercase bg-green-dark text-white text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
+              Visit site
+            </button>
+          </a>
           <div>
             <a
               class="no-underline text-blue-darker" 
@@ -93,10 +95,12 @@
             <div class="font-bold text-3xl">Leaderboard</div>
             <span class="text-blue-darker font-semibold">NodeJS + VueJS</span>
           </div>
-          <button
-            class="uppercase bg-green-dark text-white text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
-            Visit site
-          </button>
+          <a href="https://www.theleaderboardapp.com">
+            <button
+              class="uppercase bg-green-dark text-white text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
+              Visit site
+            </button>
+          </a>
           <div>
             <a
               class="no-underline text-blue-darker" 
