Fix mobile project sizing

--- a/public/index.html
+++ b/public/index.html
@@ -69,12 +69,12 @@
         <img src="assets/taskalator_screenshot.png" alt="Task Escalator project image" class="project-image"/>
         <div class="card-content">
           <div class="card-text">
-            <div class="font-bold text-3xl">Task Escalator</div>
+            <div class="font-bold text-lg md:text-2xl lg:text-3xl">Task Escalator</div>
             <span class="text-blue-darker font-semibold">Firebase + VueJS</span>
           </div>
           <a href="https://taskalator.firebaseapp.com">
             <button
-              class="uppercase bg-green-dark text-white text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
+              class="uppercase bg-green-dark text-white text-md md:text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
               Visit site
             </button>
           </a>
@@ -92,12 +92,12 @@
         <img src="assets/LeaderboardHome.png" alt="Leaderboard project image" class="project-image">
         <div class="card-content">
           <div class="card-text">
-            <div class="font-bold text-3xl">Leaderboard</div>
+            <div class="font-bold text-lg md:text-2xl lg:text-3xl">Leaderboard</div>
             <span class="text-blue-darker font-semibold">NodeJS + VueJS</span>
           </div>
           <a href="https://www.theleaderboardapp.com">
             <button
-              class="uppercase bg-green-dark text-white text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
+              class="uppercase bg-green-dark text-white text-md md:text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
               Visit site
             </button>
           </a>
