--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       <div class="w-full h-16"></div>
     </div>
     <!-- PORTFOLIO SECTION -->
-    <div id="portfolio" class="w-full px-10 flex flex-wrap justify-center">
+    <div id="portfolio" class="w-full md:px-10 flex flex-wrap justify-center">
       <div class="w-full h-24"></div>
       <div class="w-full text-center mb-5">
         <p class="uppercase text-5xl font-semibold">Projects</p>
@@ -105,6 +105,28 @@
             <a
               class="no-underline text-blue-darker" 
               href="https://github.com/TheLeaderboard/leaderboard-web">View Source</a>
+          </div>
+        </div>
+      </div>
+      <div
+        id="portfolioProject"
+        class="card w-full sm:w-full md:w-1/2 lg:w-1/3">
+        <img src="assets/portfolio_home.png" alt="Porfolio project image" class="project-image">
+        <div class="card-content">
+          <div class="card-text">
+            <div class="font-bold text-lg md:text-2xl lg:text-3xl">My Porfolio</div>
+            <span class="text-blue-darker font-semibold">HTML + JS</span>
+          </div>
+          <a href="#home">
+            <button
+              class="uppercase bg-green-dark text-white text-md md:text-xl font-semibold py-2 px-2 my-4 border border-green-dark">
+              Visit site
+            </button>
+          </a>
+          <div>
+            <a
+              class="no-underline text-blue-darker" 
+              href="https://github.com/benscrane/portfolio">View Source</a>
           </div>
         </div>
       </div>
