--- a/public/index.html
+++ b/public/index.html
@@ -107,14 +107,15 @@
               href="https://github.com/TheLeaderboard/leaderboard-web">View Source</a>
           </div>
         </div>
-      </div>
+      </div
+      <!-- Portfolio -->
       <div
         id="portfolioProject"
         class="card w-full sm:w-full md:w-1/2 lg:w-1/3">
         <img src="assets/portfolio_home.png" alt="Porfolio project image" class="project-image">
         <div class="card-content">
           <div class="card-text">
-            <div class="font-bold text-lg md:text-2xl lg:text-3xl">My Porfolio</div>
+            <div class="font-bold text-lg md:text-2xl lg:text-3xl" This Porfolio</div>
             <span class="text-blue-darker font-semibold">HTML + JS</span>
           </div>
           <a href="#home">
