--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
               href="https://github.com/TheLeaderboard/leaderboard-web">View Source</a>
           </div>
         </div>
-      </div
+      </div>
       <!-- Portfolio -->
       <div
         id="portfolioProject"
@@ -115,7 +115,7 @@
         <img src="assets/portfolio_home.png" alt="Porfolio project image" class="project-image">
         <div class="card-content">
           <div class="card-text">
-            <div class="font-bold text-lg md:text-2xl lg:text-3xl" This Porfolio</div>
+            <div class="font-bold text-lg md:text-2xl lg:text-3xl">This Porfolio</div>
             <span class="text-blue-darker font-semibold">HTML + JS</span>
           </div>
           <a href="#home">
