--- a/public/index.html
+++ b/public/index.html
@@ -46,22 +46,28 @@
     <!-- ABOUT SECTION -->
     <div id="about" class="bg-grey-lighter w-full flex flex-wrap justify-center">
       <div class="w-full h-24"></div>
-      <div class="w-full text-center">
+      <div class="w-full text-center mb-5">
         <p class="uppercase text-5xl font-semibold block">About</p>
       </div>
-      <div class="flex w-1/2">
-        <div class="w-1/3">
-          <img class="border rounded-full" src="assets/headshot.jpg">
+      <div class="flex md:w-5/6 lg:w-3/4">
+        <div class="md:w-1/2 flex flex-col items-center">
+          <div class="w-5/6 lg:w-1/2 p-5">
+            <img class="border rounded-full" src="assets/headshot.jpg">
+          </div>
+          <div class="w-full p-5 md:text-lg lg:text-xl">
+            <p>I'm a full stack developer, amateur woodworker, and rock climber.  I've always loved to build things, whether it was out of Lego bricks, pieces of wood, or digital 1s and 0s.</p>
+          </div>
         </div>
       </div>
       <div class="w-full h-16"></div>
     </div>
     <!-- PORTFOLIO SECTION -->
-    <div id="portfolio" class="w-full md:px-10 flex flex-wrap justify-center">
+    <div id="portfolio" class="w-full md:w-5/6 lg:w-3/4 flex flex-wrap m-auto">
       <div class="w-full h-24"></div>
       <div class="w-full text-center mb-5">
         <p class="uppercase text-5xl font-semibold">Projects</p>
       </div>
+      <div class="w-full flex flex-wrap justify-center">
       <!-- Task Escalator -->
       <div 
         id="taskalatorProject"
@@ -130,6 +136,7 @@
               href="https://github.com/benscrane/portfolio">View Source</a>
           </div>
         </div>
+      </div>
       </div>
       <div class="w-full h-16"></div>
     </div>
