Add knowledge bars

--- a/public/index.html
+++ b/public/index.html
@@ -49,13 +49,57 @@
       <div class="w-full text-center mb-5">
         <p class="uppercase text-5xl font-semibold block">About</p>
       </div>
-      <div class="flex md:w-5/6 lg:w-3/4">
-        <div class="md:w-1/2 flex flex-col items-center">
-          <div class="w-5/6 lg:w-1/2 p-5">
+      <div class="flex md:w-5/6 lg:w-3/4 flex-wrap">
+        <div class="lg:w-1/2 flex flex-col items-center">
+          <div class="w-5/6 md:w-1/2 p-5">
             <img class="border rounded-full" src="assets/headshot.jpg">
           </div>
           <div class="w-full p-5 md:text-lg lg:text-xl">
             <p>I'm a full stack developer, amateur woodworker, and rock climber.  I've always loved to build things, whether it was out of Lego bricks, pieces of wood, or digital 1s and 0s.</p>
+          </div>
+        </div>
+        <div class="w-full lg:w-1/2 flex flex-col items-center">
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:85%">
+              <div class="bg-blue w-24 p-2 flex justify-center">HTML</div>
+            </div>
+            <span class="self-center">90%</span>
+          </div>
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:75%">
+              <div class="bg-blue w-24 p-2 flex justify-center">CSS</div>
+            </div>
+            <span class="self-center">80%</span>
+          </div>
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:80%">
+              <div class="bg-blue w-24 p-2 flex justify-center">Javascript</div>
+            </div>
+            <span class="self-center">85%</span>
+          </div>
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:65%">
+              <div class="bg-blue w-24 p-2 flex justify-center">NodeJS</div>
+            </div>
+            <span class="self-center">70%</span>
+          </div>
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:80%">
+              <div class="bg-blue w-24 p-2 flex justify-center">Vue</div>
+            </div>
+            <span class="self-center">85%</span>
+          </div>
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:30%">
+              <div class="bg-blue w-24 p-2 flex justify-center">Cabinetry</div>
+            </div>
+            <span class="self-center">30%</span>
+          </div>
+          <div class="w-full bg-grey-light flex justify-between my-1">
+            <div class="bg-blue-light" style="width:55%">
+              <div class="bg-blue w-24 p-2 flex justify-center">Climbing</div>
+            </div>
+            <span class="self-center">5.10</span>
           </div>
         </div>
       </div>
