--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             <p>I'm a full stack developer, amateur woodworker, and rock climber.  I've always loved to build things, whether it was out of Lego bricks, pieces of wood, or digital 1s and 0s.</p>
           </div>
         </div>
-        <div class="w-full lg:w-1/2 flex flex-col items-center">
+        <div class="w-full lg:w-1/2 flex flex-col items-center p-5">
           <div class="w-full bg-grey-light flex justify-between my-1">
             <div class="bg-blue-light" style="width:85%">
               <div class="bg-blue w-24 p-2 flex justify-center">HTML</div>
