Change icon size

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="mt-10">
         <a
-          class="text-white no-underline text-xl md:text-5xl"
+          class="text-white no-underline text-4xl md:text-5xl"
           href="#about">
           <i class="mdi mdi-chevron-double-down"></i>
         </a>
